syntax = "proto3";

option java_package = "com.gm.link.common.grpc";


service PushService {
  // 单次推送接口
  rpc Push2Link (PushRequest) returns (PushResponse);

  // 新增批量推送接口
  rpc BatchPush2Link (BatchPushRequest) returns (BatchPushResponse);
}

message PushRequest {
  fixed64 fromUserId = 1;
  fixed64 timeStamp  = 2;
  fixed64 toId = 3;
  int32 messageType = 4; // 2字节，数据类型标识，标识数据类型，0-登录，1-心跳，2-ack，3-强制下线,4-私聊，5-群聊，6-系统消息，待扩展
  string content = 5;
}

message PushResponse {
  bool success = 2;
  string error = 3;
}

// 新增批量推送请求（复用单次推送字段，仅修改 toIds 为列表）
message BatchPushRequest {
  fixed64 fromUserId = 1;
  fixed64 timeStamp = 2;
  repeated fixed64 toIds = 3;  // 批量目标ID列表
  int32 messageType = 4;
  string content = 5;          // 所有用户接收相同内容
}

// 新增批量推送响应（返回每个目标的推送结果）
message BatchPushResponse {
  message Result {
    fixed64 toId = 1;
    bool success = 2;
    string error = 3;
  }
  repeated Result results = 1; // 每个目标的推送结果
}